# HealMatrix-AI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  celerybeat-schedule  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/agents/: base.py  bed_allocation_agent.py  carbon_agent.py  disease_forecast_agent.py  dispatch_agent.py  energy_agent.py  llm.py  medicine_agent.py  state.py  tasks.py  triage_agent.py  waste_agent.py  water_agent.py
backend/app/api/: deps.py
backend/app/core/: celery_app.py  config.py  constants.py  exceptions.py  logging_config.py  security.py
backend/app/database/: __init__.py  indexes.py  mongodb.py  repositories.py
backend/app/ml/: features.py  inference.py
backend/app/models/: __init__.py  base.py  clinical.py  intelligence.py  operations.py  organisation.py  sustainability.py
backend/app/rag/: ingest.py  retriever.py
backend/app/schemas/: auth.py  clinical.py
backend/app/services/: admission_service.py  auth_service.py  bed_service.py  inventory_service.py  sustainability_service.py  triage_rules.py
backend/app/simulator/: generators.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_agents_and_analytics.py  test_auth.py  test_clinical_flow.py  test_sustainability_and_admin.py
backend/tests/integration/: test_agent_cycle.py
backend/tests/unit/: test_agents_contract.py  test_agents_determinism.py  test_agents_fallback.py  test_graph_routing.py  (+3 more)
(+111 files in other folders)
